--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,23 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.background-header {
+  background: linear-gradient(to right, #0f3e5a, #14547a, #14557d);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.background-linear-blue {
+  background: linear-gradient(
+    to top,
+    rgba(20, 67, 97, 0.8),
+    rgba(97, 166, 201, 0.8),
+    rgba(166, 200, 217, 0)
+  );
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.background-linear-black {
+  background: linear-gradient(
+    to top,
+    rgba(23, 22, 22, 0.8),
+    rgba(109, 108, 108, 0.8),
+    rgba(0, 0, 0, 0)
+  );
 }
