--- a/app/globals.css
+++ b/app/globals.css
@@ -39,4 +39,15 @@
   right: 4px !important;
   font-size: 20px !important;
   margin: 4px;
+  padding: 0 4px !important;
+}
+
+.mapboxgl-popup {
+  max-width: 320px !important;
+}
+
+@media (min-width: 768px) {
+  .mapboxgl-popup {
+    max-width: 480px !important;
+  }
 }
