--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,23 @@
   display: inline !important;
   line-height: 1.5; /* để tránh dính chữ */
 }
+
+.content_projects img {
+  max-width: 100%;
+  height: auto;
+  width: 100%;
+  margin-bottom: 1rem;
+  border-radius: 12px;
+}
+
+.content_projects h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  text-align: center !important;
+}
+
+.content_projects p {
+  margin-bottom: 1rem;
+  line-height: 1.6;
+}
